<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP70_Initialize_Seq" Id="{0a0f24b3-82f6-4e08-9105-f1efa8f58c82}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP70_Initialize_Seq
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (SR30_Vert_servo_ctrl.Axis_In_Home) AND SR30_Hori_servo_ctrl.Axis_In_Home AND NOT OP70_Gripper_LH_State AND NOT OP70_Gripper_RH_State THEN
OP30_Temp_hmeOK:=TRUE;
OP30_HomeRunning:=FALSE;
OP30_Homing_Seq:=0;
ELSE
	OP30_Temp_hmeOK:=FALSE;	
END_IF

CASE OP30_Homing_Seq OF
	0: IF (OP30_AutoSelected AND NOT OP30_HomeRunning AND NOT OP30_ErrorActive AND NOT OP30_AutoRunning AND NOT OP30_StepRunning AND NOT OP30_Temp_hmeOK) THEN
		OP30_HomeRunning:=TRUE;
		OP30_Homing_Seq:=10;	
	   END_IF
	   
	10:IF (OP30_HomeRunning AND OP30_HMI_Homing)THEN 
		IF (SR30_Vert_servo_ctrl.Axis_In_Home) THEN 
			SR30_Vert_servo_ctrl.Axis_Home_Cmd:=FALSE;
		ELSE
			SR30_Vert_servo_ctrl.Axis_Home_Cmd:=TRUE;
	    END_IF
		OP30_Homing_Seq:=20;
	   END_IF	
	   
   20: IF (SR30_Hori_servo_ctrl.Axis_In_Home) THEN 
			SR30_Hori_servo_ctrl.Axis_Home_Cmd:=FALSE;
		ELSE
			SR30_Hori_servo_ctrl.Axis_Home_Cmd:=TRUE;
	    END_IF
		OP30_Homing_Seq:=40;
		
   40:  IF OP70_Gripper_LH_State THEN 
			OP70_Gripper_LH_Close := TRUE;
		ELSE
			OP70_Gripper_LH_Close := FALSE;
	    END_IF
		OP30_Homing_Seq:=50;
		
   50: 	IF OP70_Gripper_RH_State THEN 
			OP70_Gripper_RH_Close := TRUE;
		ELSE
			OP70_Gripper_RH_Close := FALSE;
	    END_IF
		OP30_Homing_Seq:=60;
   60: IF CR30_LH_Rej_Cyl.Position2 THEN
			CR30_LH_Rej_Cyl.HomingCmd1:=TRUE;	
		END_IF
		IF CR30_LH_Rej_Cyl.Position1 THEN
			CR30_LH_Rej_Cyl.HomingCmd1:=FALSE;
			OP30_Homing_Seq:=70;
		END_IF
		
   70:	IF CR30_RH_Rej_Cyl.Position2 THEN
			CR30_RH_Rej_Cyl.HomingCmd1:=TRUE;	
		END_IF
		IF CR30_RH_Rej_Cyl.Position1 THEN
			CR30_RH_Rej_Cyl.HomingCmd1:=FALSE;
			OP30_Homing_Seq:=80;
		END_IF
		
   80:	OP30_Homing_Seq:=0;
		OP30_HomeRunning:=FALSE;
		OP30_HMI_Homing:=FALSE;
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="OP70_Initialize_Seq">
      <LineId Id="3" Count="61" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>